Avoid long words to break the column layout
In a multi-column layout, long words such as a URL may extend beyond
the column limits if it is not wraped. This patchset solves this
by adjusting the word-wrap property.

--- a/modules/base/styles/ext.cx.base.less
+++ b/modules/base/styles/ext.cx.base.less
@@ -31,6 +31,7 @@ h2 {
 .cx-column {
 	.mw-ui-item;
 	.mw-ui-one-third;
+	word-wrap: break-word;
 }
 
 .cx-column--source,
